excluding resources?